# practice-rust

./: .gitignore
axum/: Cargo.toml
axum/src/: main.rs
benchmark/: Cargo.toml
benchmark/benches/: test.rs
benchmark/src/: lib.rs  main.rs
guessing_game/src/: main.rs
hello_cargo/: .gitignore
minigrep/src/: lib.rs  main.rs
practice-test/: Cargo.toml
practice-test/src/: lib.rs
practice-test/tests/: integration_test.rs
rust-playground/: Cargo.toml
rust-playground/src/: calculate_temperature.rs  collection.rs  fibonacci.rs  main.rs
rust_grammar/: Cargo.toml
rust_grammar/src/: main.rs
web-server/src/: main.rs
