[package]
name = "axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"

# async runtime
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }

# DB
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }

# serializing and deserializing
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
